--- a/styles/booting_styles.css
+++ b/styles/booting_styles.css
@@ -1,8 +1,13 @@
 .booting_screen{
+    position: absolute;
+    z-index: 10;
+    opacity: 0.5;    
     height: 100vh;
+    width: 100%;
     box-sizing: border-box;
     padding: 40px 0;
-    font-size: 25px;
+    font-size: 25px;    
+    background-color: bisque;
     color: white;
     font-family: "vga_console";
     display: flex;
