--- a/styles/booting_styles.css
+++ b/styles/booting_styles.css
@@ -1,13 +1,13 @@
 .booting_screen{
     position: absolute;
-    z-index: 10;
-    opacity: 0.5;    
+    z-index: 0;
+    opacity: 0; /*CHANGE THIS IN THE FUTURE!!!!!!!!!!!*/    
     height: 100vh;
     width: 100%;
     box-sizing: border-box;
     padding: 40px 0;
     font-size: 25px;    
-    background-color: bisque;
+    background-color: rgb(0, 0, 0); 
     color: white;
     font-family: "vga_console";
     display: flex;
