--- a/styles/main_screen_styles.css
+++ b/styles/main_screen_styles.css
@@ -2,7 +2,7 @@
     z-index: 1;
     height: 100vh;
     box-sizing: border-box;
-    background-color: blue;
+    background-color: var(--primary-cyan-solid);
     display: flex;
     flex-direction: column;
 }
@@ -23,20 +23,70 @@
 }
 
 .start_button{
-    width: 10%;
+    padding: 0 8px;
+    width: 9%;
+    height: 80%;
+    border: 3px outset;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: "windows_retro"; 
+    font-size: 20px;
+    padding-bottom: 2px;
+}
+
+.separator_gadget{
+    width: 5px;
+    height: 88%;
+    border: 3px outset;
+}
+
+.unactive_window{
+    padding: 0 0px;
+    width: 17%;
     height: 80%;
     border: 3px outset;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: "windows_retro"; 
-    font-size: 25px;
-    padding-bottom: 2px;
+    font-size: 20px;
+    padding-bottom: 2px;   
+    gap: 5px;
 }
 
-.separator_gadget{
-    width: 5px;
+.active_window{
+    padding: 0 0px;
+    width: 15%;
     height: 80%;
-    border: 3px outset;
+    border: 3px inset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "windows_retro"; 
+    font-size: 20px;
+    padding-bottom: 2px;   
+    gap: 5px;
+
 }
 
+.clock{
+    width: 20%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: auto;
+    font-family: "windows_retro"; 
+    font-size: 20px;
+    gap: 10px;
+    border: 3px inset;
+}
+
+.task_bar_icon{
+    height: 90%;
+}
+
+/* .task_bar_unopened{
+    margin-right: 7px;
+} */
