--- a/styles/global_styles.css
+++ b/styles/global_styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "windows_retro"; 
-    src: url("../assets/fonts//windows_regular.ttf"); 
+    src: url("../assets/fonts/windows_regular.ttf"); 
 }
 
 @font-face {
@@ -18,14 +18,51 @@
     margin: 0;
 }
 
-
-body{
-    background-color: black;
+body {
+    cursor: url('../assets/images/cursor.png'), auto;
 }
 
-.main_container{
-    margin-left: 20%;
-    margin-right: 20%;
-    max-height: 100vh;
+html, body {
+    height: 100%;
+    background: #000;
+    overflow: hidden;
+}
+
+.viewport{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background: #000;
+}
+
+.stage{
+    aspect-ratio: 4/3;
+    width: 100%;
+    height: 100%;
     position: relative;
+    overflow: hidden;
+    background-color: var(--primary-cyan-solid);
+    transform-origin: center center;
+}
+
+@media (min-aspect-ratio: 4/3) {
+  .stage {
+    height: 100vh;
+    width: calc(100vh * 4 / 3);
+  }
+}
+
+@media (max-aspect-ratio: 4/3) {
+  .stage {
+    width: 100vw;
+    height: calc(100vw * 3 / 4);
+  }
+}
+
+.booting_screen, .main_screen {
+    width: 100%;
+    height: 100%;
 }
